@@ -1,5 +1,6 @@
 Version 0.7:
 	* PROTON-452: Exposed Messenger interrupt method.
+	* PROTON-454: Add route method to Messenger.
 
 Version 0.6:
 	* PROTON-427: Removed the flag argument from Messenger.settle.
